--- a/.github/workflows/ml_pipeline.yml
+++ b/.github/workflows/ml_pipeline.yml
@@ -1,4 +1,4 @@
-name: ML CI/CD Pipeline
+name: ML CI/CD Pipeline (No Docker Hub)
 
 on:
   push:
@@ -7,11 +7,11 @@ on:
     branches: [ main ]
 
 jobs:
-  build-train-deploy:
+  build-train-test-docker:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
 
     - name: Set up Python
@@ -24,7 +24,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Train model
+    - name: Train ML model
       run: python train.py
 
     - name: Run tests
@@ -35,18 +35,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Log in to DockerHub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/ml-model:latest
-
-    - name: Deploy container (optional)
-      run: echo "Add your deploy steps here"
+    - name: Build Docker image (but do NOT push)
+      run: |
+        docker build -t local-ml-model:latest .
+        docker run --rm local-ml-model:latest
